[gd_scene load_steps=3 format=3 uid="uid://miar0lauuvym"]

[ext_resource type="VideoStream" uid="uid://catqaocfmxx5q" path="res://Assets/Transition_Animation.OGV" id="1_ml2rw"]
[ext_resource type="Script" uid="uid://dac1ywcubi4xj" path="res://Scenes/transition.gd" id="1_rr8bd"]

[node name="Transition_Player" type="Node2D"]
script = ExtResource("1_rr8bd")

[node name="cutSceneCam" type="Camera2D" parent="."]
enabled = false
zoom = Vector2(0.6, 0.6)

[node name="Transition_Stream" type="VideoStreamPlayer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -319.0
offset_right = 1806.0
offset_bottom = 761.0
grow_vertical = 2
stream = ExtResource("1_ml2rw")
autoplay = true
metadata/_edit_use_anchors_ = true
